--- a/CSS tasks/task_4.html
+++ b/CSS tasks/task_4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS tasks/styles/style_4.css">
+    <link rel="stylesheet" href="CSS tasks/styles/style_4.css">
     <title>CSS_Task-4</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
       
       <div style="margin-left:80px;">
         <h2>Hoverable Sidenav Buttons</h2>
-        <p>Hover over the buttons in the left side navigation to open them.</p>
+        <p>Hover over the buttons in the left-side navigation to open them.</p>
       </div>
 </body>
 </html>
