--- a/CSS tasks/task_7.html
+++ b/CSS tasks/task_7.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/CSS tasks/styles/style_7.css">
+    <link rel="stylesheet" href="CSS tasks/styles/style_7.css">
     <title>CSS_Task-7</title>
 
 </head>
