--- a/CSS tasks/task_6.html
+++ b/CSS tasks/task_6.html
@@ -10,7 +10,7 @@
 
           <form class="modal-content" action="" method="post">
             <div class="imgcontainer">
-              <img src="CSS tasks/img/profilepic.jpg" alt="Avatar" class="avatar">
+              <img src="img/profilepic.jpg" alt="Avatar" class="avatar">
             </div>
         
             <div class="container">
